# Jdw-sync

./: Dockerfile  README.md  index (1).html  index.html  index.js  ocr_server.py  package.json  parse_floor_pdf.py  parse_slip_pdf.py  parse_stock_pdf.py  pyproject.toml  render_build.sh  requirements.txt  runtime.txt  server.js
